Added functionality to Program